add animals
